# kerl

./: .gitignore  .kerlrc  .markdownlint.yml  .travis.yml  .yamllint.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  kerl  setup.cfg
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml
bash_completion/: kerl
fish_completion/: kerl.fish
tests/: activate_test.csh  activate_test.fish  activate_test.sh  dump_env.csh  expected_env.csh  run_test.csh  test_it.csh  version_parse_test.sh
zsh_completion/: _kerl
