[metadata]
name = pykerl
description = Easy building and installing of Erlang/OTP instances.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = erlang, OTP, build, install
license = GPL 3.0
classifiers =
    Framework :: Django
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
scripts =
  kerl

setup_requires =
  setuptools_scm

[bdist_wheel]
universal = 1
